--- a/curso/modulo1lista2.html
+++ b/curso/modulo1lista2.html
@@ -36,7 +36,7 @@
    William Ivanski
   </h2>
   <h3>
-   Lista de Exercícios Capítulo 2
+   Lista de Exercícios Módulo I Capítulo 2
   </h3>
   <hr/>
   <p>
@@ -114,6 +114,9 @@
   </p>
   <p>
    10) Imprimir tabuadas.
+  </p>
+  <p>
+   11) <strong>Equação do segundo grau</strong>. Solicite três inteiros <em>a</em>, <em>b</em> e <em>c</em> e imprima as raízes da equação do segundo grau, que tem a forma <em>ax<sup>2</sup> + bx + c = 0</em>.
   </p>
  </body>
 </html>
