--- a/modulo2.html
+++ b/modulo2.html
@@ -70,7 +70,7 @@
                             <!-- capitulo 1 -->
                             <tr>
                                 <td rowspan=3>Cap&iacute;tulo 1 - Paradigma de Orienta&ccedil;&atilde;o a Objetos</td>
-                                <td rowspan=3>Slides (<a target="_blank" href="curso/modulo2exemplos1.html">Exemplos</a>)</td>
+                                <td rowspan=3>Slides</td>
                                 <td rowspan=3>Exerc&iacute;cios</td>
                                 <td rowspan=3>Respostas</td>
                                 <td><a href="https://youtu.be/g465hxGKkzk">Videoaula 27/06/2015</a></td>
@@ -84,7 +84,7 @@
 
                             <!-- capitulo 2 -->
                             <tr>
-                                <td rowspan=1>Cap&iacute;tulo 2 - Bibliotecas</td>
+                                <td rowspan=1>Cap&iacute;tulo 2 - Interfaces e Classes Abstratas</td>
                                 <td rowspan=1>Slides</td>
                                 <td rowspan=1>Exerc&iacute;cios</td>
                                 <td rowspan=1>Respostas</td>
@@ -93,7 +93,7 @@
 
                             <!-- capitulo 3 -->
                             <tr>
-                                <td rowspan=1>Cap&iacute;tulo 3 - B&aacute;sico de Sistemas Operacionais</td>
+                                <td rowspan=1>Cap&iacute;tulo 3 - Bibliotecas</td>
                                 <td rowspan=1>Slides</td>
                                 <td rowspan=1>Exerc&iacute;cios</td>
                                 <td rowspan=1>Respostas</td>
@@ -111,16 +111,7 @@
 
                             <!-- capitulo 5 -->
                             <tr>
-                                <td rowspan=1>Cap&iacute;tulo 5 - Classe DataTable</td>
-                                <td rowspan=1>Slides</td>
-                                <td rowspan=1>Exerc&iacute;cios</td>
-                                <td rowspan=1>Respostas</td>
-                                <td></td>
-                            </tr>
-
-                            <!-- capitulo 5 -->
-                            <tr>
-                                <td rowspan=1>Cap&iacute;tulo 6 - Primeiro Programa Completo no Console</td>
+                                <td rowspan=1>Cap&iacute;tulo 5 - Estruturas de Dados</td>
                                 <td rowspan=1>Slides</td>
                                 <td rowspan=1>Exerc&iacute;cios</td>
                                 <td rowspan=1>Respostas</td>
@@ -129,7 +120,7 @@
 
                             <!-- capitulo 6 -->
                             <tr>
-                                <td rowspan=1>Cap&iacute;tulo 7 - Interface Gr&aacute;fica</td>
+                                <td rowspan=1>Cap&iacute;tulo 6 - Primeiro Programa Completo no Console</td>
                                 <td rowspan=1>Slides</td>
                                 <td rowspan=1>Exerc&iacute;cios</td>
                                 <td rowspan=1>Respostas</td>
@@ -138,7 +129,25 @@
 
                             <!-- capitulo 7 -->
                             <tr>
+                                <td rowspan=1>Cap&iacute;tulo 7 - Interface Gr&aacute;fica</td>
+                                <td rowspan=1>Slides</td>
+                                <td rowspan=1>Exerc&iacute;cios</td>
+                                <td rowspan=1>Respostas</td>
+                                <td></td>
+                            </tr>
+
+                            <!-- capitulo 8 -->
+                            <tr>
                                 <td rowspan=1>Cap&iacute;tulo 8 - Primeiro Programa Completo com Interface Gr&aacute;fica</td>
+                                <td rowspan=1>Slides</td>
+                                <td rowspan=1>Exerc&iacute;cios</td>
+                                <td rowspan=1>Respostas</td>
+                                <td></td>
+                            </tr>
+
+                            <!-- capitulo 9 -->
+                            <tr>
+                                <td rowspan=1>Cap&iacute;tulo 9 - B&aacute;sico de Sistemas Operacionais</td>
                                 <td rowspan=1>Slides</td>
                                 <td rowspan=1>Exerc&iacute;cios</td>
                                 <td rowspan=1>Respostas</td>
