--- a/modulo3.html
+++ b/modulo3.html
@@ -92,6 +92,7 @@
                             <li><a href="modulo1.html">M&oacute;dulo I</a></li>
                             <li><a href="modulo2.html">M&oacute;dulo II</a></li>
                             <li><a href="modulo3.html">M&oacute;dulo III</a></li>
+                            <li><a href="modulo4.html">M&oacute;dulo IV</a></li>
                         </ul>
                         <br/><br/>
                         <h2><a>Runtimes para Download</a></h2>
