--- a/modulo2.html
+++ b/modulo2.html
@@ -71,7 +71,7 @@
                             <tr>
                                 <td rowspan=3>Cap&iacute;tulo 1 - Paradigma de Orienta&ccedil;&atilde;o a Objetos</td>
                                 <td rowspan=3><a href="curso/modulo2capitulo1.pptx">Slides</a></td>
-                                <td rowspan=3><a href="curso/modulo2lista1.html">Exerc&iacute;cios</a></td>
+                                <td rowspan=3><a target="_blank" href="curso/modulo2lista1.html">Exerc&iacute;cios</a></td>
                                 <td rowspan=3>Respostas</td>
                                 <td><a href="https://youtu.be/g465hxGKkzk">Videoaula 27/06/2015</a></td>
                             </tr>
