--- a/curso/modulo1lista2.html
+++ b/curso/modulo1lista2.html
@@ -40,80 +40,40 @@
   </h3>
   <hr/>
   <p>
-   1) Solicite dois números ao usuário e imprima a
-   <strong>
-    soma
-   </strong>
-   dos dois números.
+   1) Solicite dois números ao usuário e imprima a <strong>soma</strong> dos dois números.
   </p>
   <p>
-   2) Solicite dois números ao usuário e imprima a
-   <strong>
-    subtração
-   </strong>
-   dos dois números.
+   2) Solicite dois números ao usuário e imprima a <strong>subtração</strong> dos dois números.
   </p>
   <p>
-   3) Solicite dois números ao usuário e imprima a
-   <strong>
-    multiplicação
-   </strong>
-   dos dois números.
+   3) Solicite dois números ao usuário e imprima a <strong>multiplicação</strong> dos dois números.
   </p>
   <p>
-   4) Solicite dois números ao usuário e imprima a
-   <strong>
-    divisão
-   </strong>
-   dos dois números.
+   4) Solicite dois números ao usuário e imprima a <strong>divisão</strong> dos dois números.
   </p>
   <p>
-   5) Solicite um número ao usuário e imprima o seu
-   <strong>
-    dobro
-   </strong>
-   .
+   5) Solicite um número ao usuário e imprima o seu <strong>dobro</strong>.
   </p>
   <p>
-   6) Solicite um número ao usuário e imprima o seu
-   <strong>
-    quadrado
-   </strong>
-   .
+   6) Solicite um número ao usuário e imprima o seu <strong>quadrado</strong>.
   </p>
   <p>
-   7)
-   <strong>
-    Cadastro de aluno
-   </strong>
-   . Solicite ao usuário e imprima os seguintes valores:
+   7) <strong>Cadastro de aluno</strong>. Solicite ao usuário e imprima os seguintes valores:
   </p>
   <ul>
-   <li>
-    Nome (string)
-   </li>
-   <li>
-    Idade (int)
-   </li>
-   <li>
-    Sexo (char)
-   </li>
-   <li>
-    Nota média final (double)
-   </li>
+   <li>Nome (string)</li>
+   <li>Idade (int)</li>
+   <li>Sexo (char)</li>
+   <li>Nota média final (double)</li>
   </ul>
   <p>
-   8)
-   <strong>
-    Conversor de tempo
-   </strong>
-   . Solicite ao usuário o total em segundos, e imprima o correspondente em horas, minutos e segundos.
+   8) <strong>Conversor de tempo</strong>. Solicite ao usuário o total em segundos, e imprima o correspondente em horas, minutos e segundos.
   </p>
   <p>
    9) Imprimir sequências de inteiros.
   </p>
   <p>
-   10) Imprimir tabuadas.
+   10) Imprimir tabuadas do 1 ao 10.
   </p>
   <p>
    11) <strong>Equação do segundo grau</strong>. Solicite três inteiros <em>a</em>, <em>b</em> e <em>c</em> e imprima as raízes da equação do segundo grau, que tem a forma <em>ax<sup>2</sup> + bx + c = 0</em>.
