--- a/modulo1.html
+++ b/modulo1.html
@@ -81,8 +81,8 @@
                             <!-- capitulo 2 -->
                             <tr>
                                 <td rowspan=1>Cap&iacute;tulo 2 - IDE e Vari&aacute;veis</td>
-                                <td rowspan=1>Slides</td>
-                                <td rowspan=1>Exerc&iacute;cios</td>
+                                <td rowspan=1><a href="curso/modulo1capitulo2.pptx">Slides</a></td>
+                                <td rowspan=1><a target="_blank" href="curso/modulo1lista2.html">Exerc&iacute;cios</a></td>
                                 <td rowspan=1>Respostas</td>
                                 <td><a href="https://youtu.be/R9lshOAsxX8">Videoaula 11/07/2015</a></td>
                             </tr>
