--- a/curso/modulo2lista1.html
+++ b/curso/modulo2lista1.html
@@ -156,5 +156,9 @@
    <p>
     b) Com os mesmos dados do item (a), imprima a classificação dos times do campeonato (do primeiro para o último). A classificação é pelo número de pontos ganhos (PG) e em segundo lugar pelo saldo de gols (S). Se houver empate segundo os dois critérios, classifique pelo número de vitórias, número de gols marcados e até mesmo por ordem alfabética do nome do time.
    </p>
+   <hr/>
+   <p>
+    12) Com o auxílio de um programa de geração automática de diagramas de classes a partir do executável (recomendo o <a target="_blank" href="http://nclass.sourceforge.net/downloads.html">NClass</a>, crie e estude os diagramas de classes de todos os exercícios acima. O que os diagramas apresentam? O que significam as setas?
+   </p>
  </body>
 </html>
