--- a/curso/modulo2lista1.html
+++ b/curso/modulo2lista1.html
@@ -158,7 +158,7 @@
    </p>
    <hr/>
    <p>
-    12) Com o auxílio de um programa de geração automática de diagramas de classes a partir do executável (recomendo o <a target="_blank" href="http://nclass.sourceforge.net/downloads.html">NClass</a>, crie e estude os diagramas de classes de todos os exercícios acima. O que os diagramas apresentam? O que significam as setas?
+    12) Com o auxílio de um programa de geração automática de diagramas de classes a partir do executável (recomendo o <a target="_blank" href="http://nclass.sourceforge.net/downloads.html">NClass</a>), crie e estude os diagramas de classes de todos os exercícios acima. O que os diagramas apresentam? O que significam as setas?
    </p>
  </body>
 </html>
