--- a/modulo2.html
+++ b/modulo2.html
@@ -69,10 +69,10 @@
                         <table border=1>
                             <!-- capitulo 1 -->
                             <tr>
-                                <td rowspan=3>Cap&iacute;tulo 1 - Paradigma de Orienta&ccedil;&atilde;o a Objetos</td>
-                                <td rowspan=3><a href="curso/modulo2capitulo1.pptx">Slides</a></td>
-                                <td rowspan=3><a target="_blank" href="curso/modulo2lista1.html">Exerc&iacute;cios</a></td>
-                                <td rowspan=3>Respostas</td>
+                                <td rowspan=4>Cap&iacute;tulo 1 - Paradigma de Orienta&ccedil;&atilde;o a Objetos</td>
+                                <td rowspan=4><a href="curso/modulo2capitulo1.pptx">Slides</a></td>
+                                <td rowspan=4><a target="_blank" href="curso/modulo2lista1.html">Exerc&iacute;cios</a></td>
+                                <td rowspan=4><a target="_blank" href="curso/modulo2respostas1.html">Respostas</a><</td>
                                 <td><a href="https://youtu.be/g465hxGKkzk">Videoaula 27/06/2015</a></td>
                             </tr>
                             <tr>
@@ -80,6 +80,9 @@
                             </tr>
                             <tr>
                                 <td><a href="https://youtu.be/hXKksJJx3BQ">Videoaula 11/07/2015</a></td>
+                            </tr>
+                            <tr>
+                                <td><a href="https://youtu.be/f8_8r48Isog">Videoaula 18/07/2015</a></td>
                             </tr>
 
                             <!-- capitulo 2 -->
