--- a/modulo1.html
+++ b/modulo1.html
@@ -80,11 +80,14 @@
                             
                             <!-- capitulo 2 -->
                             <tr>
-                                <td rowspan=1>Cap&iacute;tulo 2 - IDE e Vari&aacute;veis</td>
-                                <td rowspan=1><a href="curso/modulo1capitulo2.pptx">Slides</a></td>
-                                <td rowspan=1><a target="_blank" href="curso/modulo1lista2.html">Exerc&iacute;cios</a></td>
-                                <td rowspan=1>Respostas</td>
+                                <td rowspan=2>Cap&iacute;tulo 2 - IDE e Vari&aacute;veis</td>
+                                <td rowspan=2><a href="curso/modulo1capitulo2.pptx">Slides</a></td>
+                                <td rowspan=2><a target="_blank" href="curso/modulo1lista2.html">Exerc&iacute;cios</a></td>
+                                <td rowspan=2><a target="_blank" href="curso/modulo1respostas2.html">Respostas</a></td>
                                 <td><a href="https://youtu.be/R9lshOAsxX8">Videoaula 11/07/2015</a></td>
+                            </tr>
+                            <tr>
+                                <td><a href="https://youtu.be/l-_x-HDxorU">Videoaula 18/07/2015</a></td>
                             </tr>
                             
                             <!-- capitulo 3 -->
