--- a/modulo2.html
+++ b/modulo2.html
@@ -72,7 +72,7 @@
                                 <td rowspan=4>Cap&iacute;tulo 1 - Paradigma de Orienta&ccedil;&atilde;o a Objetos</td>
                                 <td rowspan=4><a href="curso/modulo2capitulo1.pptx">Slides</a></td>
                                 <td rowspan=4><a target="_blank" href="curso/modulo2lista1.html">Exerc&iacute;cios</a></td>
-                                <td rowspan=4><a target="_blank" href="curso/modulo2respostas1.html">Respostas</a><</td>
+                                <td rowspan=4><a target="_blank" href="curso/modulo2respostas1.html">Respostas</a></td>
                                 <td><a href="https://youtu.be/g465hxGKkzk">Videoaula 27/06/2015</a></td>
                             </tr>
                             <tr>
