--- a/curso/modulo1lista2.html
+++ b/curso/modulo1lista2.html
@@ -73,7 +73,7 @@
    9) Imprimir sequências de inteiros.
   </p>
   <p>
-   10) Imprimir tabuadas do 1 ao 10.
+   10) Imprimir tabuadas.
   </p>
   <p>
    11) <strong>Equação do segundo grau</strong>. Solicite três inteiros <em>a</em>, <em>b</em> e <em>c</em> e imprima as raízes da equação do segundo grau, que tem a forma <em>ax<sup>2</sup> + bx + c = 0</em>.
