--- a/curso/modulo2lista1.html
+++ b/curso/modulo2lista1.html
@@ -71,7 +71,7 @@
     <li><tt>MoverPara</tt>, que mudará as coordenadas do ponto;</li>
     <li><tt>Distancia(Ponto3D p2)</tt>, que calculará a distância do ponto até outro ponto <em>p2</em>;</li>
    </ul>
-  <p>Use propriedades para resolver este exercício. Seu programa deve criar um array de <em>N</em> pontos e solicitar as coordenadas de todos eles ao usuário. Após isso, deve calcular e mostrar entre o primeiro ponto e os demais pontos.</p>
+  <p>Use propriedades para resolver este exercício. Seu programa deve criar um array de <em>N</em> pontos e solicitar as coordenadas de todos eles ao usuário. Após isso, deve calcular e mostrar a distância entre o primeiro ponto e os demais pontos.</p>
   <hr/>
   <p>
    5) Crie um programa orientado a objetos com as seguintes características:
